--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,123 @@
 /*======= Navbar Styling Properties ====================*/
 body {
-    background-color: white;
-    color:black;
-}
-#logo {
+    background-color: black;
+    padding-top: 20px;
+    font-family: Courier New, Courier, monospace;
     color: red;
-    font-size: 45px;
-    font-weight: bold;
-    text-align: center;
+    text-shadow: 0 0 2px black, -1px -1px 2px black, 1px 0 2px black , 1px 1px 2px black;
+    background: url('../images/marvel.jpg') no-repeat;
+    background-size: cover;
 }
-h2 {
-    color: black;
+.container { 
     text-align: center;
-}
-.lead{
-    text-align: center;
-}
     
+}
+h1,h2,h3,
+h4,h5,h6 {
+    padding: 5px;
+ 
+}
+#title-image, #gameover-image, #youwin-image{ 
+    display: block;
+    margin: 0 auto;
+}
+
+#currentWord {
+    letter-spacing: 10px;
+}
+
+#pressKeyTryAgain, 
+#gameover-image, 
+#youwin-image { display: none;}
+.gameplay-column {
+    padding-top: 20px;
+    border: 3px dashed #fff;
+    text-align: center;
+    margin-top: 20px;
+    min-height: 500px;
+    background-color: rgba(255, 255, 255, 0.37);
+    
+}
+.gameplay-alphabet {
+    padding-top: 10px;
+    border: 3px dashed #fff;
+    text-align: center;
+    margin-top: 10px;
+    min-height: 250px;
+    background-color: rgba(255, 255, 255, 0.37); 
+}
+
+#alphabet {
+    margin: 15px auto;
+    padding: 0;
+    max-width: 900px;
+    text-shadow: none;
+  }
+  #alphabet:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  #alphabet li {
+    float: left;
+    margin: 0 10px 10px 0;
+    list-style: none;
+    width: 35px;
+    height: 30px;
+    padding-top: 5px;
+    background: #fff;
+    color: red;
+    cursor: pointer;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    -khtml-border-radius: 5px;
+    border: solid 1px #fff;
+  }
+  #alphabet li:hover {
+    background: red;
+    border: solid 1px #fff;
+    color: #fff;
+  }
+  
+  #my-word{
+    margin: 0;
+    display: block;
+    padding: 0;
+    display: block;
+  }
+  
+  #my-word li {
+    position: relative;
+    list-style: none;
+    margin: 0;
+    display: inline-block;
+    padding: 0 10px;
+    font-size: 1.6em;
+  }
+  
+  .active {
+    opacity: 0.4;
+    filter: alpha(opacity=40);
+    cursor: default;
+  }
+  .active:hover {
+    -moz-transition: all 1s ease-in;
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    opacity: 0.4;
+    filter: alpha(opacity=40);
+    -moz-transition: all 1s ease-in;
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+  }
+  
+  #remainingStrikes 
+  {
+    font-size: 1.6em;
+    text-align: center;
+    display: block;
+  }
+  
+  
