--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
-/*======= Navbar Styling Properties ====================*/
+/*======= Body Styling Properties ====================*/
 body {
     background-color: black;
     padding-top: 20px;
     font-family: Courier New, Courier, monospace;
-    color: red;
-    text-shadow: 0 0 2px black, -1px -1px 2px black, 1px 0 2px black , 1px 1px 2px black;
+    color: black;
+    text-shadow: 0 0 2px red, -1px -1px 2px red, 1px 0 2px red , 1px 1px 2px red;
     background: url('../images/marvel.jpg') no-repeat;
     background-size: cover;
 }
@@ -13,7 +13,8 @@ body {
     
 }
 h1,h2,h3,
-h4,h5,h6 {
+h4,h5,h6 
+{
     padding: 5px;
  
 }
@@ -23,7 +24,7 @@ h4,h5,h6 {
 }
 
 #currentWord {
-    letter-spacing: 10px;
+    letter-spacing: 5px;
 }
 
 #pressKeyTryAgain, 
@@ -35,16 +36,16 @@ h4,h5,h6 {
     text-align: center;
     margin-top: 20px;
     min-height: 500px;
-    background-color: rgba(255, 255, 255, 0.37);
+    background-color: rgba(255, 255, 255, 0.692);
     
 }
 .gameplay-alphabet {
-    padding-top: 10px;
+    padding-top: 20px;
     border: 3px dashed #fff;
     text-align: center;
-    margin-top: 10px;
-    min-height: 250px;
-    background-color: rgba(255, 255, 255, 0.37); 
+    margin-top: 20px;
+    min-height: 500px;
+    background-color: rgba(255, 255, 255, 0.692); 
 }
 
 #alphabet {
@@ -119,5 +120,47 @@ h4,h5,h6 {
     text-align: center;
     display: block;
   }
+  .disabled 
+  {
+    pointer-events: none;
+    opacity: 0.4;
+    filter: alpha(opacity=40);
+  }
+  button 
+  {
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    -khtml-border-radius: 5px;
+    background: #ffffff;
+    color: red;
+    border: solid 1px #fff;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 1.2em;
+    padding: 18px 10px;
+    width: 180px;
+    margin: 10px;
+    outline: none;
+  }
+  button:hover {
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background: red;
+    border: solid 1px #ffffff;
+    color: #ffffff;
+  }
   
+  @media (max-width: 767px) {
+    #alphabet {
+      padding: 0 0 0 15px;
+    }
+  }
+  @media (max-width: 480px) 
+  {
+    #alphabet {
+      padding: 0 0 0 25px;
+    }
+  }
   
